<resources>
    <string name="app_name">Grip</string>

    <string name="title_activity_navigation">NavigationActivity</string>

    <!-- history page -->
    <string name="title_history">History</string>
    <string name="delete">Delete</string>

    <!-- new bill page -->
    <string name="title_new_bill">New Bill</string>
    <string name="calculate_total">Calculate Total</string>
    <string name="num_ppl_sharing">Number of People Sharing: </string>
    <string name="add_new_item">Create New Item</string>
    <string name="quantity">Quantity</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="num_ppl_sharing_default_value">1</string>

    <string name="bill_details">Bill Details</string>
    <string name="receipt_label">Receipt Label: </string>
    <string name="subtotal">Subtotal: </string>
    <string name="tax">Tax: </string>
    <string name="tip">Tip: </string>
    <string name="grand_total">Grand Total: </string>
    <string name="each_person_should_pay">Each should pay: </string>
    <string name="save">Save</string>
    <string name="email">Email</string>
    <string name="close">Close</string>

    <!-- settings page -->
    <string name="title_settings">Settings</string>
    <string name="setting_bill_calculation">Bill Calculation</string>
    <string name="set_tax_rate">Set Tax Rate </string>
    <string name="default_tax_rate">0.08875</string>

    <string name="enable_tips">Enable Tips</string>
    <string name="set_tip_rate">Set Tip Rate</string>
    <string name="default_tip">0.15</string>

    <!-- preference keys and values -->
    <string name="tax_preference_key">tax_edit_text_preference</string>
    <string name="tip_switch_preference_key">parent_tip_switch_preference</string>
    <string name="tip_list_preference_key">tip_list_preference</string>
    <string name="device_stylish_preference_key">devices_stylish_preference</string>
    <string name="share_stylish_preference_key">share_stylish_preference</string>
    <string name="notifications_checkbox_preference_key">notifications_checkbox_preference</string>
    <string name="version_stylish_preference_key">version_stylish_preference</string>
    <string name="logout_preference_key">logout_preference</string>

    <string name="explore_tax_rates">Explore Tax Rates</string>
    <string name="setting_account">Account</string>
    <string name="setting_security">Security</string>
    <string name="setting_device">Device</string>
    <string name="setting_social">Social</string>
    <string name="setting_share">Share this app</string>
    <string name="setting_notifications">Notifications</string>
    <string name="setting_enable_notifications">Enable or disable notifications</string>
    <string name="setting_about">About</string>
    <string name="version">Version</string>
    <string name="version_number">v1.0.0</string>
    <string name="logout">Log out</string>

    <string-array name="tip_rate_options">
        <item>15%</item>
        <item>18%</item>
        <item>20%</item>
        <item>25%</item>
    </string-array>

    <string-array name="tip_rate_values">
        <item>0.15</item>
        <item>0.18</item>
        <item>0.20</item>
        <item>0.25</item>
    </string-array>

    <!-- Explore Tax Page -->
    <string name="enter_zip_code">Enter your zip code to find your area\'s tax rate</string>
    <string name="zip_code_hint">14228</string>
    <string name="find_tax_rate">Find Tax Rate</string>
    <string name="copy_tax_rate_and_change_setting">Copy tax rate below into settings</string>
    <string name="please_wait">Please wait ...</string>
    <string name="connection_error">Please check your internet connection and try again.</string>

    <!-- hint strings -->
    <string name="hint_date">09/13/2018</string>
    <string name="hint_quantity">20</string>
    <string name="hint_label">Japanese Food</string>
    <string name="hint_total">$1350.00</string>
    <string name="hint_sample_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi iaculis leo quis viverra cursus. Donec a tristique erat, eu interdum nisi. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Suspendisse pulvinar, ligula a aliquet iaculis, dui orci posuere justo, id aliquam tellus nulla sit amet orci.</string>
    <string name="hint_receipt_label">Pizza</string>

    <!-- content descriptions -->
    <string name="cd_receipt_image">This is the receipt image</string>
    <string name="cd_add_item">This button adds items to bill list</string>

    <!-- widget -->
    <string name="quick_bill">Quick Bill</string>
    <string name="configure">Configure Widget</string>
    <string name="add_widget">Add widget</string>
    <string name="fifteen_percent">0.15</string>
    <string name="eighteen_percent">0.18</string>
    <string name="twenty_percent">0.20</string>
    <string name="twenty_five_percent">0.25</string>

    <!-- label for -->
    <string name="label_for_receipt_input">Receipt label input</string>
    <string name="label_for_sharing_input">Sharing label input</string>
    <string name="label_for_price_input">Price label input</string>
    <string name="label_for_quantity_input">Quantity label input</string>
    <string name="label_for_tax_input">Tax label input</string>
    <string name="label_for_tip_input">Tip label input</string>

    <!-- snackbar -->
    <string name="create_item_error">Create some items before calculating total</string>
    <string name="people_sharing_valid_input">The number of people sharing must be one or more</string>
    <string name="people_sharing_empty">Please provide a value for number of people sharing</string>
    <string name="saved">Saved!</string>
    <string name="add_item_fields_empty">Check fields and try again.</string>
    <string name="missing_fields">Please fill in the missing fields</string>

    <!-- email intent -->
    <string name="send_email">Send an email</string>
    <string name="tip_rate_empty">Please provide a tip rate</string>
    <string name="tax_rate_empty">Please provide a tax rate</string>

</resources>
