<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/title_settings">

     <PreferenceCategory
        android:title="@string/setting_bill_calculation">

         <EditTextPreference
             android:key="@string/tax_preference_key"
             android:title="@string/set_tax_rate"
             android:dialogTitle="@string/set_tax_rate"
             android:defaultValue="@string/default_tax_rate"
             android:dialogLayout="@layout/pref_dialog_edittext_fix"/>

         <PreferenceScreen
             android:title="@string/explore_tax_rates">

             <intent android:action="launch.explore.activity" />

         </PreferenceScreen>

         <SwitchPreference
             android:key="@string/tip_switch_preference_key"
             android:title="@string/enable_tips"
             android:defaultValue="true"/>

         <ListPreference
             android:key="@string/tip_list_preference_key"
             android:title="@string/set_tip_rate"
             android:dependency="@string/tip_switch_preference_key"
             android:dialogTitle="@string/set_tip_rate"
             android:defaultValue="@string/default_tip"
             android:entries="@array/tip_rate_options"
             android:entryValues="@array/tip_rate_values"
             />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/setting_security">

    <Preference
        android:key="@string/device_stylish_preference_key"
        android:title="@string/setting_device" />

    </PreferenceCategory>

    <!-- <PreferenceCategory
        android:title="@string/setting_social">

        <Preference
            android:key="@string/share_stylish_preference_key"
            android:title="@string/setting_share" />

    </PreferenceCategory> -->

    <!-- <PreferenceCategory
        android:title="@string/setting_notifications">

        <SwitchPreference
            android:key="@string/notifications_checkbox_preference_key"
            android:title="@string/setting_notifications"
            android:defaultValue="true"/>

    </PreferenceCategory> -->

    <PreferenceCategory
        android:title="@string/setting_about">

        <Preference
            android:key="@string/version_stylish_preference_key"
            android:title="@string/version"
            android:summary="@string/version_number" />

    </PreferenceCategory>

    <Preference
        android:key="@string/logout_preference_key"
        android:title="@string/logout" />


    <!--
<PreferenceCategory
android:title="@string/title_activity_navigation">

 This PreferenceScreen tag serves as a screen break (similar to page break
     in word processing). Like for other preference types, we assign a key
     here so it is able to save and restore its instance state.
<PreferenceScreen
    android:key="screen_preference"
    android:title="@string/title_activity_navigation"
    android:summary="@string/title_activity_navigation"> -->

            <!-- You can place more preferences here that will be shown on the next screen.

            <CheckBoxPreference
                android:key="next_screen_checkbox_preference"
                android:title="@string/title_activity_navigation"
                android:summary="@string/title_activity_navigation" />

        </PreferenceScreen>

        <PreferenceScreen
            android:title="@string/title_activity_navigation"
            android:summary="@string/title_activity_navigation">

            <intent android:action="android.intent.action.VIEW"
                android:data="http://www.android.com" />

        </PreferenceScreen>
    </PreferenceCategory> -->

</PreferenceScreen>