<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_ri_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint_date"/>

    <TextView
        android:id="@+id/tv_ri_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/hint_label"/>

    <TextView
        android:id="@+id/tv_ri_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/hint_total"/>
</FrameLayout>