<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--TODO move title to center with padding -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:text="@string/receipt_details"
        android:layout_gravity="center"
        android:background="@color/colorPrimaryDark"/>

    <TextView
        android:id="@+id/et_add_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/subtotal"
        android:layout_gravity="end"/>

    <TextView
        android:id="@+id/et_add_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:hint="@string/tax"
        android:layout_gravity="end"/>

    <TextView
        android:id="@+id/et_add_nam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:hint="@string/tip"
        android:layout_gravity="end"/>

    <TextView
        android:id="@+id/et_add_na"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:hint="@string/grand_total"
        android:layout_gravity="end"/>

    <TextView
        android:id="@+id/et_add_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/each_person_should_pay"
        android:layout_gravity="end"/>
</android.support.constraint.ConstraintLayout>