<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/explore_tax_coordinator"
    tools:context=".ui.ExploreTaxActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimaryDark"/>

            <Button
                android:id="@+id/btn_back"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/ic_baseline_arrow_back_24px"
                android:onClick="goBack"/>
            <TextView
                android:id="@+id/tv_title"
                android:text="@string/explore_tax_rates"
                style="@style/titleStyle" />
        </FrameLayout>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/tv_tax_rate_instruction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_zip_code" />

        <EditText
            android:id="@+id/et_tax_rate_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/zip_code_hint"
            android:layout_gravity="center_horizontal"
            android:inputType="number"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/btn_get_tax_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/find_tax_rate"
            android:layout_gravity="center_horizontal"
            style="@style/buttonStyle"
            android:onClick="getTaxRate"/>

        <TextView
            android:id="@+id/tv_copy_tax_rate_instruction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/copy_tax_rate_and_change_setting"
            android:layout_gravity="center_horizontal"
            android:visibility="invisible"/>

        <!-- TODO make tax rate copyable or make copy button to clipboard or copy button to send tax rate-->
        <TextView
            android:id="@+id/tv_tax_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/default_tax_rate"
            android:layout_gravity="center_horizontal"
            android:visibility="invisible"/>

        <Button
            android:id="@+id/btn_save_tax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/save"
            style="@style/buttonStyle"
            android:layout_gravity="center_horizontal"
            android:visibility="invisible"
            android:onClick="saveTaxRate"/>
    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>