<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <!--TODO move title to center with padding -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:text="@string/add_new_item"
        android:textAlignment="center"
        android:textSize="24sp"
        android:background="@color/colorPrimaryDark"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"/>

    <EditText
        android:id="@+id/et_add_quantity"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/quantity"
        android:textColorHint="@color/white"/>

    <EditText
        android:id="@+id/et_add_name"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:fontFamily="sans-serif"
        android:hint="@string/name"
        android:textColorHint="@color/white"/>

    <EditText
        android:id="@+id/et_add_price"
        android:inputType="numberDecimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"
        android:hint="@string/price"
        android:textColorHint="@color/white"/>
</LinearLayout>