<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="@color/colorPrimaryDark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">
        
        <ImageView
            android:id="@+id/iv_receipt_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_home_black_24dp"/>

        <TextView
            android:id="@+id/tv_receipt_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_date"/>

        <TextView
            android:id="@+id/tv_receipt_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_label"/>

        <TextView
            android:id="@+id/tv_receipt_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_total"/>
    </LinearLayout>

</android.support.v7.widget.CardView>