<!-- TODO change this later, need to add TextView for total?-->
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/widget_margin"
    android:background="@drawable/dialog_background">

    <TextView
        android:id="@+id/tv_widget_title"
        android:text="@string/quick_bill"
        android:layout_centerHorizontal="true"
        style="@style/titleStyle"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:background="@color/colorPrimaryDark"/>

    <ListView
        android:id="@+id/widget_item_list"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_widget_title"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/border">
    </ListView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_widget_add_new_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editText"
        app:srcCompat="@android:drawable/ic_input_add" />

    <TextView
        android:id="@+id/tv_widget_sharing_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginStart="84dp"
        android:text="@string/num_ppl_sharing"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btn_widget_calculate_total"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_widget_sharing_input"
        android:layout_width="42dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:inputType="number"
        android:textColor="@color/white"
        android:text="@string/num_ppl_sharing_default_value"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/btn_widget_calculate_total"
        app:layout_constraintStart_toEndOf="@+id/tv_widget_sharing_label" />

    <Button
        android:id="@+id/btn_widget_calculate_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/calculate_total"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/buttonStyle"/>

    <EditText
        android:id="@+id/editText"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/fab_widget_add_new_item"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toStartOf="@+id/editText"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/quantity"
        app:layout_constraintStart_toStartOf="@+id/editText2"
        app:layout_constraintTop_toBottomOf="@+id/widget_item_list" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/price"
        app:layout_constraintStart_toStartOf="@+id/editText"
        app:layout_constraintTop_toBottomOf="@+id/widget_item_list" />

    <!-- <TextView
        android:id="@+id/appwidget_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="8dp"
        android:background="#09C"
        android:contentDescription="@string/appwidget_text"
        android:text="@string/appwidget_text"
        android:textColor="#ffffff"
        android:textSize="24sp"
        android:textStyle="bold|italic" /> -->

</android.support.constraint.ConstraintLayout>